apps/paperless-ngx/tika.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paperless-ngx-tika
  namespace: paperless-ngx
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: paperless-ngx-tika
  template:
    metadata:
      labels:
        app.kubernetes.io/name: paperless-ngx-tika
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 35002
        runAsGroup: 35002
        fsGroup: 35002
        seccompProfile:
          type: RuntimeDefault
      containers:
        # Extracts text/metadata from documents for paperless.
        - name: tika
          image: docker.io/apache/tika:3.3.1.0-full@sha256:d8e6ed96260ad89307a93195a1b856102987a818ac648502f8efbaf313d32470  # yamllint disable-line rule:line-length
          ports:
            - name: http
              containerPort: 9998
          livenessProbe:
            httpGet:
              path: /tika
              port: http
            initialDelaySeconds: 15
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /tika
              port: http
            periodSeconds: 15
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
            capabilities:
              drop:
                - ALL
            seccompProfile:
              type: RuntimeDefault
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 1000m
              memory: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: paperless-ngx-tika
  namespace: paperless-ngx
spec:
  selector:
    app.kubernetes.io/name: paperless-ngx-tika
  ports:
    - name: http
      port: 9998
      targetPort: http
