apps/paperless-ngx/route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: paperless-ngx
  namespace: paperless-ngx
spec:
  parentRefs:
    - name: default
      namespace: gateway
      sectionName: paperless
  hostnames:
    - paperless.tomerhanochi.com
  rules:
    - backendRefs:
        - name: paperless-ngx
          port: 8000
